created pinecone pipeline: initiate, update (for DB) & ask (for chatbot).

--- a/data_ingest.ipynb
+++ b/data_ingest.ipynb
@@ -151,7 +151,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Initialize DB"
+    "## Create local DB"
    ]
   },
   {
@@ -2067,6 +2067,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "!!! OLD CODE. SEEMS BAD, NOT WORKING PROPERLY !!!"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 45,
    "metadata": {},
@@ -2161,7 +2168,6 @@
     "    meta_batch = df4pine[meta_cols][i: i+batch_size].to_dict(orient='records')\n",
     "    \n",
     "    # upsert to Pinecone \n",
-    "    # !!! meta skipped due to errors\n",
     "    to_upsert = zip(ids_batch, embeds_batch, meta_batch)\n",
     "    index.upsert(vectors=list(to_upsert))"
    ]
@@ -2484,7 +2490,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Updating DB's (local & pinecone)"
+    "# Updating DB's (local)"
    ]
   },
   {
