finished pinecone update - both notebook and script. one full run (40+ channels), seems working.

--- a/pinecone DB/pinecone_ask.ipynb
+++ b/pinecone DB/pinecone_ask.ipynb
@@ -74,9 +74,9 @@
      "data": {
       "text/plain": [
        "{'dimension': 1536,\n",
-       " 'index_fullness': 0.32058,\n",
-       " 'namespaces': {'': {'vector_count': 32058}},\n",
-       " 'total_vector_count': 32058}"
+       " 'index_fullness': 0.4712,\n",
+       " 'namespaces': {'': {'vector_count': 47120}},\n",
+       " 'total_vector_count': 47120}"
       ]
      },
      "execution_count": 3,
@@ -95,12 +95,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "# set up openai\n",
-    "openai.api_key = openai_key"
+    "openai.api_key = openai_key\n",
+    "def get_embedding(text, model=\"text-embedding-ada-002\"):\n",
+    "   text = text.replace(\"\\n\", \" \")\n",
+    "   return openai.Embedding.create(input = [text], model=model)['data'][0]['embedding']"
    ]
   },
   {
@@ -112,25 +115,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def get_embedding(text, model=\"text-embedding-ada-002\"):\n",
-    "   text = text.replace(\"\\n\", \" \")\n",
-    "   return openai.Embedding.create(input = [text], model=model)['data'][0]['embedding']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "# FILTERS\n",
     "# metadata: 'cleaned_message', 'summary', 'stance', 'channel', 'date', 'views'\n",
     "stance = 'voenkor'\n",
-    "dates = ['2021-10-02', '2021-10-04']\n",
+    "dates = ['2021-10-20', '2021-10-24']\n",
     "# define start and end dates (if end date is not defined, it will be set to today)\n",
     "if len(dates) == 2:\n",
     "  start_date = dates[0]\n",
@@ -150,6 +142,224 @@
     "  \"date\": { \"$lte\": end_date }\n",
     "}"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'stance': {'$eq': 'voenkor'}, 'date': {'$lte': 1635019200}}"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "filter"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dates = ['2021-10-20']\n",
+    "\n",
+    "if dates:\n",
+    "    if len(dates) == 2:\n",
+    "        # convert start_date to int\n",
+    "        start_date = dates[0]\n",
+    "        end_date = dates[1]\n",
+    "    else:\n",
+    "        start_date = dates[0]\n",
+    "        end_date = datetime.today().strftime('%Y-%m-%d')\n",
+    "else:\n",
+    "    start_date = '2022-02-01'\n",
+    "    end_date = datetime.today().strftime('%Y-%m-%d')\n",
+    "\n",
+    "# filtering\n",
+    "start_date = int(datetime.strptime(start_date, '%Y-%m-%d').timestamp())\n",
+    "end_date = int(datetime.strptime(end_date, '%Y-%m-%d').timestamp())\n",
+    "\n",
+    "filter = {\n",
+    "    \"stance\": { \"$eq\": stance },\n",
+    "    \"date\": { \"$gte\": start_date, \"$lte\": end_date },\n",
+    "    }"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'stance': {'$eq': 'voenkor'},\n",
+       " 'date': {'$gte': 1634673600, '$lte': 1698004800}}"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "filter"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "question_emb = get_embedding(\"Что происходит в Израиле\")\n",
+    "res = index.query(question_emb, top_k=10, include_metadata=True, filter=filter)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'id': 'voenacher_54287',\n",
+       "  'score': 0.865285635,\n",
+       "  'values': [],\n",
+       "  'metadata': {'channel': 'voenacher',\n",
+       "   'cleaned_message': '❗ Разборы Рыбаря: итоги 12 октября 2023 года\\n\\nМихаил Звинчук в своей авторской передаче на @SolovievLive подводит итоги событий на фронтах специальной военной операции и рассказывает о значимых происшествиях в кризисных районах мира.\\n\\nВ сегодняшнем выпуске:\\n\\n Зона израильско-палестинского конфликта:\\n▪продолжение ударов по городам Израиля и бомбардировок Сектора Газа.\\n▪Египет готовит гуманитарную миссию;\\n▪США перебрасывают спецназ для эвакуации заложников;\\n▪глава Госдепа Энтони Блинкен посетил в Израиль;\\n▪зачем ВВС Израиля опять ударили по Сирии;\\n▪как эскалация отразилась на экономике Израиля.\\n\\n Зона специальной военной операции:\\n▪продолжение боев на Авдеевском участке;\\n▪временное затишье на Времьевском выступе.\\n\\nПостсоветское пространство:\\n▪Молдавия окончательно теряет единственный морской порт.\\n#видео #разбор\\n@rybar\\n\\nПоддержать нас',\n",
+       "   'date': 1697054400.0,\n",
+       "   'stance': 'voenkor',\n",
+       "   'summary': 'Михаил Звинчук в своей авторской передаче на @SolovievLive подводит итоги событий на фронтах специальной военной операции и рассказывает о значимых происшествиях в кризисных районах мира. Зона израильско-палестинского конфликта: ▪продолжение ударов по городам Израиля и бомбардировок Сектора Газа. ▪Египет готовит гуманитарную миссию; ▪США перебрасывают спецназ для эвакуации заложников; ▪глава Госдепа Энтони Блинкен посетил в Израиль; ▪зачем ВВС Израиля опять ударили по Сирии; ▪как эскалация отразилась на экономике Израиля.',\n",
+       "   'views': 203823.0}},\n",
+       " {'id': 'rybar_53174',\n",
+       "  'score': 0.865075,\n",
+       "  'values': [],\n",
+       "  'metadata': {'channel': 'rybar',\n",
+       "   'cleaned_message': '❗ Разборы Рыбаря: итоги 12 октября 2023 года\\n\\nМихаил Звинчук в своей авторской передаче на @SolovievLive подводит итоги событий на фронтах специальной военной операции и рассказывает о значимых происшествиях в кризисных районах мира.\\n\\nВ сегодняшнем выпуске:\\n\\n Зона израильско-палестинского конфликта:\\n▪продолжение ударов по городам Израиля и бомбардировок Сектора Газа.\\n▪Египет готовит гуманитарную миссию;\\n▪США перебрасывают спецназ для эвакуации заложников;\\n▪глава Госдепа Энтони Блинкен посетил в Израиль;\\n▪зачем ВВС Израиля опять ударили по Сирии;\\n▪как эскалация отразилась на экономике Израиля.\\n\\n Зона специальной военной операции:\\n▪продолжение боев на Авдеевском участке;\\n▪временное затишье на Времьевском выступе.\\n\\nПостсоветское пространство:\\n▪Молдавия окончательно теряет единственный морской порт.\\n#видео #разбор\\n@rybar\\n\\nПоддержать нас',\n",
+       "   'date': 1697054400.0,\n",
+       "   'stance': 'voenkor',\n",
+       "   'summary': 'Михаил Звинчук в своей авторской передаче на @SolovievLive подводит итоги событий на фронтах специальной военной операции и рассказывает о значимых происшествиях в кризисных районах мира. Зона израильско-палестинского конфликта: ▪продолжение ударов по городам Израиля и бомбардировок Сектора Газа. ▪Египет готовит гуманитарную миссию; ▪США перебрасывают спецназ для эвакуации заложников; ▪глава Госдепа Энтони Блинкен посетил в Израиль; ▪зачем ВВС Израиля опять ударили по Сирии; ▪как эскалация отразилась на экономике Израиля.',\n",
+       "   'views': 518385.0}},\n",
+       " {'id': 'voenacher_53712',\n",
+       "  'score': 0.862731099,\n",
+       "  'values': [],\n",
+       "  'metadata': {'channel': 'voenacher',\n",
+       "   'cleaned_message': 'В Сдероте полиция Израиля продолжает проведение контртеррористических мероприятий',\n",
+       "   'date': 1696622400.0,\n",
+       "   'stance': 'voenkor',\n",
+       "   'summary': 'В Сдероте полиция Израиля продолжает проведение контртеррористических мероприятий',\n",
+       "   'views': 192039.0}},\n",
+       " {'id': 'voenacher_53647',\n",
+       "  'score': 0.859736681,\n",
+       "  'values': [],\n",
+       "  'metadata': {'channel': 'voenacher',\n",
+       "   'cleaned_message': 'Чрезвычайное положение вводится на территории всего Израиля — СМИ',\n",
+       "   'date': 1696622400.0,\n",
+       "   'stance': 'voenkor',\n",
+       "   'summary': 'Чрезвычайное положение вводится на территории всего Израиля — СМИ',\n",
+       "   'views': 181041.0}},\n",
+       " {'id': 'voenacher_53804',\n",
+       "  'score': 0.858711302,\n",
+       "  'values': [],\n",
+       "  'metadata': {'channel': 'voenacher',\n",
+       "   'cleaned_message': 'Израильские армейские части прибывшие на усиление, и пикап с вооружёнными палестинцами ночью на улицах Ашкелона.',\n",
+       "   'date': 1696708800.0,\n",
+       "   'stance': 'voenkor',\n",
+       "   'summary': 'Израильские армейские части прибывшие на усиление, и пикап с вооружёнными палестинцами ночью на улицах Ашкелона.',\n",
+       "   'views': 213302.0}},\n",
+       " {'id': 'voenacher_53654',\n",
+       "  'score': 0.858528197,\n",
+       "  'values': [],\n",
+       "  'metadata': {'channel': 'voenacher',\n",
+       "   'cleaned_message': 'Так израильских граждан насильно вывозят в Сектор Газа. На фото уже находящиеся там в плену израильтяне.',\n",
+       "   'date': 1696622400.0,\n",
+       "   'stance': 'voenkor',\n",
+       "   'summary': 'Так израильских граждан насильно вывозят в Сектор Газа. На фото уже находящиеся там в плену израильтяне.',\n",
+       "   'views': 179419.0}},\n",
+       " {'id': 'voenacher_53786',\n",
+       "  'score': 0.858308077,\n",
+       "  'values': [],\n",
+       "  'metadata': {'channel': 'voenacher',\n",
+       "   'cleaned_message': 'Иерусалим. Беспорядки в ходе которых местные арабы противостоят израильским силовикам. На втором видео бунт израильских арабов в одном из городов.',\n",
+       "   'date': 1696708800.0,\n",
+       "   'stance': 'voenkor',\n",
+       "   'summary': 'Иерусалим. Беспорядки в ходе которых местные арабы противостоят израильским силовикам. На втором видео бунт израильских арабов в одном из городов.',\n",
+       "   'views': 220935.0}},\n",
+       " {'id': 'voenacher_54157',\n",
+       "  'score': 0.858165622,\n",
+       "  'values': [],\n",
+       "  'metadata': {'channel': 'voenacher',\n",
+       "   'cleaned_message': 'Израильские ресурсы сообщают о сложной ситуации на границе с Ливаном',\n",
+       "   'date': 1696968000.0,\n",
+       "   'stance': 'voenkor',\n",
+       "   'summary': 'Израильские ресурсы сообщают о сложной ситуации на границе с Ливаном',\n",
+       "   'views': 230827.0}},\n",
+       " {'id': 'rybar_53281',\n",
+       "  'score': 0.857596636,\n",
+       "  'values': [],\n",
+       "  'metadata': {'channel': 'rybar',\n",
+       "   'cleaned_message': '  В Кейптауне и других крупных городах ЮАР прошли массовые акции протеста против действий Израиля на территории Сектора Газа.\\n\\nСотни граждан выкрикивали антивоенные лозунги, называли Израиль государством апартеида и призывали президента ЮАР Сирила Рамафосу к организации помощи палестинцам и аннулированию лицензии израильской авиакомпании El Al. \\n\\nМногие участники протеста несли флаги Палестины и ЮАР, а также транспаранты с призывами солидарности с палестинцами. В демонстрациях приняли участие представители различных религиозных конфессий, включая мусульман, христиан и иудеев.\\n\\nНа одну из акций вышел сам Сирил Рамафоса в палестинском платке. Он призвал к немедленному открытию гуманитарных коридоров и заявил, что правящая партия «Африканский национальный конгресс» выражает соболезнования народам Израиля и Палестины.\\n\\nЕдинственным выходом из ситуации, по мнению президента ЮАР, является реализация инициативы по созданию двух отдельных государств в границах 1967 года.\\n#Африка #ЮАР #Изариль #видео\\n@rybar\\n\\nПоддержать нас',\n",
+       "   'date': 1697313600.0,\n",
+       "   'stance': 'voenkor',\n",
+       "   'summary': 'В Кейптауне и других крупных городах ЮАР прошли массовые акции протеста против действий Израиля на территории Сектора Газа. В демонстрациях приняли участие представители различных религиозных конфессий, включая мусульман, христиан и иудеев. На одну из акций вышел сам Сирил Рамафоса в палестинском платке.',\n",
+       "   'views': 354441.0}},\n",
+       " {'id': 'rybar_52971',\n",
+       "  'score': 0.857543,\n",
+       "  'values': [],\n",
+       "  'metadata': {'channel': 'rybar',\n",
+       "   'cleaned_message': '❗ Обострение в зоне израильско-палестинского конфликта\\nобстановка по состоянию на 13.00 9 октября 2023 года\\n\\nУ сектора Газа продолжаются столкновения между еще оставшимися на израильской территории палестинскими боевиками и Армией обороны Израиля (АОИ). Последние заявили о восстановлении контроля над всеми населенными пунктами по периметру анклава и проведении зачистки территории.\\n\\nИзраильское военно-политическое руководство заявило о планах полностью уничтожить ХАМАС и ведет с оппозицией переговоры о создании единого чрезвычайного правительства для легитимации своих действий в борьбе против группировок.\\n\\nСеверное направление:\\n\\n▪В последние часы в Зикиме и Сдероте шли эпизодические бои, в район прибыли десантники из бригады «Цанханим». В Шаар-Ха-Негев произошли перестрелки с разрозненными группами боевиков, которым удалось убить как минимум четырех израильских военнослужащих. \\n\\n▪Бойцы АОИ перехватили боевиков у кибуца Кфар-Аза, помешав им зайти в населенный пункт. Бои у населенного пункта на данный момент продолжаются.\\n\\nВосточное направление:\\n\\n▪В населенных пунктах Алумим и Нирим идут перестрелки. Информация о локальных боях время от времени подтверждается сообщениями АОИ о ликвидации одного-двух боевиков. \\n\\n▪Малые группы членов палестинских формирований на мотоциклах перемещаются между небольшими населенными пунктами и пытаются создать эффект широкого присутствия вдоль условной линии фронта.\\n\\nИ все же массовое присутствие палестинцев в приграничных городах Израиля, по всей видимости, постепенно сходит на нет.\\n\\nМассированные обстрелы:\\n\\n▪Со вчерашнего вечера и до нынешнего момента израильский ВВС наносят массированные удары по целям на территории сектора Газа. Палестинская сторона традиционно обвинила израильтян в неизбирательных ударах и массовых убийствах гражданских. \\n\\nИ это отчасти правда — с учетом плотности населения в Газе не попасть по гражданским довольно трудно. Да и сами палестинские группировки стараются максимально использовать гибель гражданских в качестве аргумента против Израиля.\\n\\n▪В ответ ХАМАС произвел залп по Ашкелону и другим городам. Несколько ударов пришлось по Иерусалиму, Ришон-ле-Циону и аэропорту Бен-Гурион в Тель-Авиве.\\n\\n▪С перехватом ракет у израильской ПВО возникают определенные трудности. После третьего дня залпов система «Железный купол» пропускает все больше ракет, и все чаще фиксируются попадания, приводящие к жертвам. \\n\\nОдновременно распространяются слухи о грядущем дефиците у Израиля ракет ПВО, почву для которых ещё вчера дало заявление о просьбе к США предоставить зенитные ракеты.\\n\\nЗападный берег:\\n\\nНа Западном берегу после масштабных протестов и столкновений с наступлением дня ситуация несколько успокоилась. Однако и там продолжаются операции израильских силовых структур и нападения палестинцев.\\n\\n▪В Дотане и Хармише утром произошла перестрелка, а в Наблусе —митинги и столкновения, в том числе с применением оружия. На севере, в районе Тулькарма и Нецани Оз продолжаются протесты и столкновения, хотя до полноценных уличных боев еще не дошло.\\n\\nНа фоне событий минувшего дня можно предположить что с наступлением темноты арабская молодежь вновь выйдет на улицы городов Западного берега.\\n\\nКарта в высоком разрешении\\n\\nEnglish version\\n\\nПредыдущие сводки с обстановкой: вчера | 7 октября\\n\\n#дайджест #карта #Израиль #Палестина\\n@rybar\\n\\nПоддержать нас',\n",
+       "   'date': 1696795200.0,\n",
+       "   'stance': 'voenkor',\n",
+       "   'summary': 'У сектора Газа продолжаются столкновения между еще оставшимися на израильской территории палестинскими боевиками и Армией обороны Израиля (АОИ). ▪Малые группы членов палестинских формирований на мотоциклах перемещаются между небольшими населенными пунктами и пытаются создать эффект широкого присутствия вдоль условной линии фронта. И все же массовое присутствие палестинцев в приграничных городах Израиля, по всей видимости, постепенно сходит на нет.',\n",
+       "   'views': 305796.0}}]"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "res.to_dict()['matches']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
