--- a/pinecone DB/pinecone_ingest.ipynb
+++ b/pinecone DB/pinecone_ingest.ipynb
@@ -926,9 +926,10 @@
     "channel = df_channels.iloc[i]['channel_name']    \n",
     "last_id = df_channels.iloc[i]['last_id']\n",
     "stance = df_channels.iloc[i]['stance']\n",
+    "start_date = datetime.datetime(2023, 10, 1) # minimum date for TelegramClient\n",
     "\n",
     "#function to get new messages from channel\n",
-    "async def get_new_messages(channel, last_id):\n",
+    "async def get_new_messages(channel, last_id, start_date):\n",
     "    async with TelegramClient('session', api_id, api_hash) as client:\n",
     "        # COLLECT NEW MESSAGES\n",
     "        data = [] # for collecting new messages\n",
@@ -937,7 +938,7 @@
     "            offset_id = int(last_id)\n",
     "        except:\n",
     "            offset_id = 0\n",
-    "        async for message in client.iter_messages(channel, reverse=True, offset_id=offset_id):\n",
+    "        async for message in client.iter_messages(channel, reverse=True, offset_id=offset_id, offset_date=start_date):\n",
     "            data.append(message.to_dict())\n",
     "        # if no new messages, skip\n",
     "    print(f\"Channel: {channel}, N of new messages: {len(data)}\")\n",
